--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,8 +2,14 @@
 @import "bootstrap";
 
 .img_user{
-  max-width: 100px;
-  max-height: 100px;
+  width: 100px;
+  height: 100px;
+}
+
+.profile_user{
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
 }
 
 @mixin box_sizing{
@@ -39,4 +45,16 @@
 .signup-form{
   color: $state-danger-text;
 
+}
+
+//list info
+.profile{
+  float: left;
+  margin-bottom: 150px;
+  .list_info{
+    li{
+      font-size: 25px;
+      line-height: 40px;
+    }
+  }
 }
