--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,9 +39,30 @@
         <div class="col-sm-8">
           <div class="shop-menu pull-right">
             <ul class="nav navbar-nav">
-              <li><a href="#"><i class="fa fa-user"></i><%= t("label.account") %></a></li>
               <li><a href=""><i class="fa fa-shopping-cart"></i><%= t("label.cart") %></a></li>
-              <li><a href=""><i class="fa fa-lock"></i><%= t("label.login") %></a></li>
+              <% if logged_in? %>
+                <li>
+                  <%= link_to current_user do %>
+                    <i class="fa fa-user" ></i><%= t("label.account") %>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to logout_path, method: :delete do %>
+                    <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                  <% end %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to login_path do %>
+                    <i class="fa fa-lock"></i><%= t("label.login") %>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to new_user_path do %>
+                    <i class="fa fa-sign-in"></i><%= t("label.sign_in") %></a>
+                  <% end %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
