--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-sm-4 col-sm-offset-4">
         <div class="signup-form"><!--sign up form-->
-          <h2><%= t ".title_form" %></h2>
+          <h2><%= t ".title" %></h2>
           <%= render "form" %>
         </div><!--/sign up form-->
       </div>
