--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,17 @@
                 <% end %>
               </li>
               <% if logged_in? %>
+                <% if current_user.admin? %>
+                  <li>
+                     <%= link_to t("label.admin"), "#", class: "dropdown-toggle",
+                        data: {toggle: "dropdown"} %>
+                     <ul class="dropdown-menu">
+                        <li>
+                          <%= link_to t("label.manage_order"), admin_orders_path %>
+                        </li>
+                    </ul>
+                  </li>
+                <% end %>
                 <li>
                   <%= link_to current_user do %>
                     <i class="fa fa-user"></i><%= t("label.account") %>
