--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      <%= full_title yield(:title) %>
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <title><%= full_title yield(:title) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,10 +15,15 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
-    <div class="container">
-      <%= yield %>
-      <%= render "layouts/footer" %>
+    <div>
+        <%= render "layouts/header" %>
+        <div class="container">
+          <% flash.each do |message_type, message| %>
+            <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+          <% end %>
+        </div>
+        <%= yield %>
+        <%= render "layouts/footer" %>
     </div>
   </body>
 </html>
