--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,16 +41,16 @@
             <ul class="nav navbar-nav">
               <li>
                 <%= link_to carts_path do %><i class="fa fa-shopping-cart"></i><%= t("label.cart") %>
-                 <% if logged_in? %>
-                  <span class="cart-text"><%= current_order.order_items.size %>
-                  </span>
-                 <% end %>
+                  <% if logged_in? %>
+                    <span class="cart-text"><%= current_order.order_items.size %>
+                    </span>
+                  <% end %>
                 <% end %>
               </li>
               <% if logged_in? %>
                 <li>
                   <%= link_to current_user do %>
-                    <i class="fa fa-user" ></i><%= t("label.account") %>
+                    <i class="fa fa-user"></i><%= t("label.account") %>
                   <% end %>
                 </li>
                 <li>
@@ -58,17 +58,17 @@
                     <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
                   <% end %>
                 </li>
-              <% else %>
-                <li>
-                  <%= link_to login_path do %>
-                    <i class="fa fa-lock"></i><%= t("label.login") %>
-                  <% end %>
-                </li>
-                <li>
-                  <%= link_to new_user_path do %>
-                    <i class="fa fa-sign-in"></i><%= t("label.sign_in") %></a>
-                  <% end %>
-                </li>
+                <% else %>
+                  <li>
+                    <%= link_to login_path do %>
+                      <i class="fa fa-lock"></i><%= t("label.login") %>
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to new_user_path do %>
+                      <i class="fa fa-sign-in"></i><%= t("label.sign_in") %></a>
+                    <% end %>
+                  </li>
               <% end %>
             </ul>
           </div>
@@ -94,10 +94,11 @@
           <div class="mainmenu pull-left">
             <ul class="nav navbar-nav collapse navbar-collapse">
               <li><%= link_to root_path, class: "active" do %><%= t("label.home") %><% end %></li>
-              <li class="dropdown"><a href="#"><%= t("label.categorie") %><i class="fa fa-angle-down"></i></a>
+              <li class="dropdown"><%= link_to t("label.categorie"), products_path %><i class="fa fa-angle-down"></i>
                 <ul role="menu" class="sub-menu">
-                  <li><a href="#"><%= t("label.foods") %></a></li>
-                  <li><a href="#"><%= t("label.drinks") %></a></li>
+                  <% load_categories.each do |category|%>
+                    <li><%= link_to category.name, products_path(get_category_id: category.id)%></li>
+                  <% end %>
                 </ul>
               </li>
               <li><a href=""><%= t("label.blog") %></a></li>
