--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<%= provide :title, t(".title") %>
+<%= provide :title, t("title.detail") %>
 <section>
   <div class="container">
     <div class="row">
@@ -26,13 +26,10 @@
                 <i class="fa fa-angle-right"></i>
               </a>
             </div>
-
           </div>
           <div class="col-sm-7">
             <div class="product-information">
               <!--/product-information-->
-              <img src="images/product-details/new.jpg" class="newarrival" alt="" />
-
               <div class="row">
                 <h2><%= @product.name %></h2>
                 <div class="rating">
@@ -65,54 +62,7 @@
           </div>
         </div>
         <!--/product-details-->
-
-        <div class="category-tab shop-details-tab">
-          <!--category-tab-->
-          <div class="col-sm-12">
-            <ul class="nav nav-tabs">
-              <li><a href="#details" data-toggle="tab"><%= t("label.details") %></a></li>
-              <li class="active"><a href="#reviews" data-toggle="tab"><%= t("label.reviews") %></a></li>
-            </ul>
-          </div>
-          <div class="tab-content">
-            <div class="tab-pane fade" id="details">
-              <p><%= @product.description %></p>
-            </div>
-
-            <div class="tab-pane fade active in" id="reviews">
-              <div class="col-sm-12">
-                <ul>
-                  <li><a href=""><i class="fa fa-user"></i>EUGEN</a></li>
-                  <li><a href=""><i class="fa fa-clock-o"></i>12:41 PM</a></li>
-                  <li><a href=""><i class="fa fa-calendar-o"></i>31 DEC 2014</a></li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                  ex ea
-                  commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                  fugiat
-                  nulla pariatur.</p>
-                <p><b>Write Your Review</b></p>
-
-                <form action="#">
-                  <span>
-                    <input type="text" placeholder="Your Name" />
-                    <input type="email" placeholder="Email Address" />
-                  </span>
-                  <textarea name=""></textarea>
-                  <b>Rating: </b> <img src="images/product-details/rating.png" alt="" />
-                  <button type="button" class="btn btn-default pull-right">
-                    Submit
-                  </button>
-                </form>
-              </div>
-            </div>
-
-          </div>
-        </div>
-        <!--/category-tab-->
-
+        <%= render "reviews" %>
         <%= render "shared/hot_items" %>
 
       </div>
