--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,11 +46,11 @@
             </ul>
           </div>
           <div>
-            <%= form_tag products_path, method: :get, class: "", role: :search do %>
-            <div class="search_box pull-right">
-              <%= text_field_tag :search_by_name, ""%>
-              <%= submit_tag t("label.search"), id: "btnSearch"%>
-            </div>
+            <%= search_form_for @q, url: search_path do |f| %>
+              <div class="search_box pull-right">
+                  <%= f.text_field :name_cont %>
+                <%= f.submit t("label.search"), id: "btnSearch"%>
+              </div>
             <% end %>
           </div>
         </div>
