--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,7 +5,7 @@
         <%= link_to image_tag(product.picture.url.to_s), product,class: "pic-1", alt: t("products.alt_img") %>
         <h2><%= number_to_currency product.price %></h2>
         <p><h2><%= product.name %></h2></p>
-        <% if logged_in? %>
+        <% if user_signed_in? %>
           <%= form_for @order_item, remote: true do |f| %>
             <%= f.hidden_field :quantity, value: 1, class: "form-control", min: 1 %>
             <%= f.hidden_field :product_id, value: product.id %>
