--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,2 @@
 <%= provide :title, t(".title") %>
-<%= render "shared/slider" %>
-<section>
-  <div class="container">
-    <div class="row">
-      <%= render "shared/sidebar" %>
-
-      <div class="col-sm-9 padding-right">
-        <%= render "shared/items" %>
-
-        <%= render "shared/hot_items" %>
-      </div>
-    </div>
-  </div>
-</section>
+<%= render "static_pages/layout" %>
