--- a/app/views/shared/_hot_items.html.erb
+++ b/app/views/shared/_hot_items.html.erb
@@ -5,12 +5,12 @@
   <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="item active">
-        <% @cur_slide_items.each do |item| %>
+        <% @data[:cur_slide_items].each do |item| %>
         <%= render item %>
         <% end %>
       </div>
       <div class="item">
-        <% @trend_items.each do |item| %>
+        <% @data[:trend_items].each do |item| %>
         <%= render item %>
         <% end %>
       </div>
