--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -9,13 +9,13 @@
         </div>
       </div>
       <% load_categories.each do |category|%>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <%= link_to category.name, products_path(get_category_id: category.id)%>
-          </h4>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <%= link_to category.name, products_path(get_category_id: category.id)%>
+            </h4>
+          </div>
         </div>
-      </div>
       <% end %>
     </div>
     <!--/category-products-->
@@ -24,7 +24,7 @@
       <h2><%= t("label.new_item") %></h2>
       <div class="brands-name">
         <ul class="nav nav-pills nav-stacked">
-          <% @new_products.each do |item|%>
+          <% @data[:new_products].each do |item|%>
             <li>
               <%= link_to image_tag(item.picture.url.to_s), item, alt: t("products.alt_img"), size: "80x80" %>
               <h5><%= item.name %>
