--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,14 @@
         <div class="col-sm-8">
           <div class="shop-menu pull-right">
             <ul class="nav navbar-nav">
-              <li><a href=""><i class="fa fa-shopping-cart"></i><%= t("label.cart") %></a></li>
+              <li>
+                <%= link_to carts_path do %><i class="fa fa-shopping-cart"></i><%= t("label.cart") %>
+                 <% if logged_in? %>
+                  <span class="cart-text"><%= current_order.order_items.size %>
+                  </span>
+                 <% end %>
+                <% end %>
+              </li>
               <% if logged_in? %>
                 <li>
                   <%= link_to current_user do %>
@@ -86,7 +93,7 @@
           </div>
           <div class="mainmenu pull-left">
             <ul class="nav navbar-nav collapse navbar-collapse">
-              <li><a href="index.html" class="active"><%= t("label.home") %></a></li>
+              <li><%= link_to root_path, class: "active" do %><%= t("label.home") %><% end %></li>
               <li class="dropdown"><a href="#"><%= t("label.categorie") %><i class="fa fa-angle-down"></i></a>
                 <ul role="menu" class="sub-menu">
                   <li><a href="#"><%= t("label.foods") %></a></li>
