--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -27,7 +27,7 @@
           <li>
             <div class="shipping text-center">
               <!--shipping-->
-              <%= image_tag("food1.jpg", :alt => "food", :class => "girl img-responsive", size: "80x80") %>
+              <%= image_tag("food1.jpg", alt: "food", class: "girl img-responsive", size: "80x80") %>
             </div>
             <!--/shipping-->
           </li>
