--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t(".title") %>
+<%= provide :title, t(".title") %>
 <%= render "shared/slider" %>
 <section>
   <div class="container">
