--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,4 @@
-﻿
-/*************************
+﻿/*************************
 *******Typography******
 **************************/
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
@@ -267,7 +266,6 @@ a#scrollUp i{
   background-repeat: no-repeat;
   background-position: 130px;
 }
-
 
 /*  Dropdown menu*/
 
