--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,7 +71,7 @@
   </div>
   <!--/header-middle-->
 
-  <div class="header-bottom">
+  <div class="header-bottom fixed-top">
     <!--header-bottom-->
     <div class="container">
       <div class="row">
