Search by name product

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -170,3 +170,9 @@
     text-align: center;
   }
 }
+
+#btnSearch {
+  background-image: url(./searchicon.png);
+  color: chocolate;
+  background-color: lightgoldenrodyellow;
+}
