--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,12 @@
 <%= provide :title, t(".title") %>
+<% content_for :content do %>
 <div class="container">
-  <h1><%= t ".title" %></h1>
+  <div class="row">
+    <div class="col-md-10">
+        <h1><%= t ".title" %></h1>
+    </div>
+    <span class="btn btn-info"><%= link_to t("label.create"), new_admin_product_path %></span>
+  </div>
   <h3><%= t ".total_product" %>: <%= Product.all.size %> </h3>
   <table class="table table-striped">
     <thead>
@@ -18,7 +24,6 @@
     </tbody>
   </table>
   <%= will_paginate @product, class: "btn btn-success" %>
-  <div>
-    <span class="btn btn-info"><%= link_to t(".button"), new_admin_product_path %></span>
-  </div>
 </div>
+<% end %>
+<%= render "users/admin" %>
