--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -190,3 +190,9 @@
   background-color: coral;
   color: white;
 }
+
+/* admin product */
+.admin_product_images img{
+  width: 80px;
+  height: 60px;
+}
