--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -3,18 +3,22 @@
 <div class="container">
   <h1><%= t ".title" %></h1>
   <ul class="nav nav-tabs">
-  <%= form_tag admin_orders_path, method: :get do %>
-    <%= select_tag :status, options_for_select(@order.statuses, params[:status]) %>
-    <%= submit_tag t(".search"), class: "btn btn-success" %>
-  <% end %>
+    <%= form_tag admin_orders_path, method: :get, class: "form-group" do %>
+    <div class=" col-md-3">
+      <%= select_tag :status, options_for_select(@order.statuses, params[:status]), class: "form-control" %>
+    </div>
+    <div class=" col-md-3">
+      <%= submit_tag t(".search"), class: "btn btn-success" %>
+    </div>
+    <% end %>
   </ul>
-  <div class="tab-content">
+  <div class="tab-content col-md-12">
     <div id="home" class="tab-pane fade in active">
       <h3><%= t ".confirm" %></h3>
       <% if @order %>
-        <%= render @order %>
+      <%= render @order %>
       <% else %>
-        <b><i><%= t ".no_order" %></i></b>
+      <b><i><%= t ".no_order" %></i></b>
       <% end %>
     </div>
     <%= will_paginate @order %>
