--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,67 +59,53 @@
             <ul class="nav navbar-nav">
               <li>
                 <%= link_to carts_path do %><i class="fa fa-shopping-cart"></i><%= t("label.cart") %>
-                <% if logged_in? %>
-                <span class="cart-text"><%= current_order.order_items.size %>
-                </span>
-                <% end %>
+                  <% if logged_in? %>
+                    <span class="cart-text"><%= current_order.order_items.size %>
+                    </span>
+                  <% end %>
                 <% end %>
               </li>
               <% if logged_in? %>
-              <% if current_user.admin? %>
-              <li>
-                <%= link_to t("label.admin"), "#", class: "dropdown-toggle",
-                        data: {toggle: "dropdown"} %>
-                <ul class="dropdown-menu">
+                <% if current_user.admin? %>
                   <li>
-                    <%= link_to t("label.manage_user"), admin_users_path %>
-                  </li><br>
-                  <li>
-                    <%= link_to t("label.manage_order"), admin_orders_path %>
+                     <%= link_to t("label.admin"), admin_statistics_path %>
                   </li>
-                  <br>
-                  <li>
-                    <%= link_to t("label.manage_sugest"), admin_sugests_path %>
-                  </li>
-                </ul>
-              </li>
-              <% end %>
-              <li>
-                <%= link_to t("label.account"), "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
-                <ul class="dropdown-menu">
-                  <li>
-                    <%= link_to t("label.profile"), current_user %>
-                  </li><br>
-                  <li>
-                    <%= link_to t("label.history_order"), history_orders_path %>
-                  </li><br>
-                  <li>
-                    <%= link_to t("label.setting"), edit_user_path(current_user) %>
-                  </li><br>
-                  <hr>
-                  <li>
-                    <%= link_to logout_path, method: :delete do %>
+                <% end %>
+                <li>
+                   <%= link_to t("label.account"), "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <%= link_to t("label.profile"), current_user %>
+                      </li><br>
+                       <li>
+                        <%= link_to t("label.history_order"), history_orders_path %>
+                      </li><br>
+                      <li>
+                        <%= link_to t("label.setting"), edit_user_path(current_user) %>
+                      </li><br><hr>
+                      <li>
+                        <%= link_to logout_path, method: :delete do %>
+                          <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                        <% end %>
+                      </li>
+                    </ul>
+                </li>
+                <li>
+                  <%= link_to logout_path, method: :delete do %>
                     <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                  <% end %>
+                </li>
+                <% else %>
+                  <li>
+                    <%= link_to login_path do %>
+                      <i class="fa fa-lock"></i><%= t("label.login") %>
                     <% end %>
                   </li>
-                </ul>
-              </li>
-              <li>
-                <%= link_to logout_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
-                <% end %>
-              </li>
-              <% else %>
-              <li>
-                <%= link_to login_path do %>
-                <i class="fa fa-lock"></i><%= t("label.login") %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to new_user_path do %>
-                <i class="fa fa-sign-in"></i><%= t("label.sign_in") %></a>
-                <% end %>
-              </li>
+                  <li>
+                    <%= link_to new_user_path do %>
+                      <i class="fa fa-sign-in"></i><%= t("label.sign_in") %></a>
+                    <% end %>
+                  </li>
               <% end %>
             </ul>
           </div>
