--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,15 +54,32 @@
                         data: {toggle: "dropdown"} %>
                      <ul class="dropdown-menu">
                         <li>
+                          <%= link_to t("label.manage_user"), admin_users_path %>
+                        </li><br>
+                        <li>
                           <%= link_to t("label.manage_order"), admin_orders_path %>
                         </li>
                     </ul>
                   </li>
-                <% end %>
-                <li>
-                  <%= link_to current_user do %>
-                    <i class="fa fa-user"></i><%= t("label.account") %>
                   <% end %>
+                <li>
+                   <%= link_to t("label.account"), "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <%= link_to t("label.profile"), current_user %>
+                      </li><br>
+                       <li>
+                        <%= link_to t("label.history_order"), history_orders_path %>
+                      </li><br>
+                      <li>
+                        <%= link_to t("label.setting"), edit_user_path(current_user) %>
+                      </li><br><hr>
+                      <li>
+                        <%= link_to logout_path, method: :delete do %>
+                          <i class="fa fa-sign-out"></i><%= t("label.log_out") %>
+                        <% end %>
+                      </li>
+                    </ul>
                 </li>
                 <li>
                   <%= link_to logout_path, method: :delete do %>
