--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -109,3 +109,64 @@
 .brands-name .nav-stacked li a {
   display: inline;
 }
+
+.single-products img{
+  width: auto;
+  height: 230px;
+}
+
+.recommended_items{
+  margin-top: 25px;
+}
+
+.brands_products h5{
+  display: inline;
+}
+
+.brands_products span{
+  position: absolute;
+  top: 50px;
+  margin-left: 15px;
+  font-style: italic;
+  color: brown;
+}
+
+.brands_products img{
+  height: 80px;
+  width: 80px;
+}
+
+.brands-name .nav-stacked li a {
+  display: inline;
+}
+
+.product-information{
+  span {
+    font-size: 30px;
+  }
+  label {
+    font-size: 18px;
+  }
+}
+
+.rate_point_lb {
+  margin-left: 50px;
+}
+
+.def-number-input {
+  display: inline;
+  margin-left: 35px;
+  button {
+    padding: 5px 15px;
+  }
+  .minus {
+    background-color: floralwhite;
+  }
+  .plus {
+    background-color: chartreuse;
+  }
+  input {
+    padding: 5px 5px;
+    text-align: center;
+  }
+}
