--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header id="header">
+<header id="header"  class="navbar navbar-default navbar-fixed-top">
   <!--header-->
   <div class="header_top">
     <!--header_top-->
@@ -32,9 +32,20 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <div class="logo pull-left">
-            <%= image_tag("logo.png", :alt => "logo", :class => "img-thumbnail", size: "150") %>
-          </div>
+            <div class="mainmenu pull-left">
+                <ul class="nav navbar-nav collapse navbar-collapse">
+                  <li><%= link_to root_path, class: "active" do %><%= t("label.home") %><% end %></li>
+                  <li class="dropdown"><%= link_to t("label.categorie"), products_path %><i class="fa fa-angle-down"></i>
+                    <ul role="menu" class="sub-menu">
+                      <% load_categories.each do |category|%>
+                        <li><%= link_to category.name, products_path(get_category_id: category.id)%></li>
+                      <% end %>
+                    </ul>
+                  </li>
+                  <li><a href=""><%= t("label.blog") %></a></li>
+                  <li><a href=""><%= t("label.contact") %></a></li>
+                </ul>
+              </div>
         </div>
         <div class="col-sm-8">
           <div class="shop-menu pull-right">
@@ -91,25 +102,18 @@
               <span class="icon-bar"></span>
             </button>
           </div>
-          <div class="mainmenu pull-left">
-            <ul class="nav navbar-nav collapse navbar-collapse">
-              <li><%= link_to root_path, class: "active" do %><%= t("label.home") %><% end %></li>
-              <li class="dropdown"><%= link_to t("label.categorie"), products_path %><i class="fa fa-angle-down"></i>
-                <ul role="menu" class="sub-menu">
-                  <% load_categories.each do |category|%>
-                    <li><%= link_to category.name, products_path(get_category_id: category.id)%></li>
-                  <% end %>
-                </ul>
-              </li>
-              <li><a href=""><%= t("label.blog") %></a></li>
-              <li><a href=""><%= t("label.contact") %></a></li>
-            </ul>
-          </div>
+          
         </div>
         <div class="col-sm-6">
-          <div class="search_box pull-right">
+          <!-- <div class="search_box pull-right">
             <input type="text" placeholder="Search" />
+          </div> -->
+          <%= form_tag products_path, method: :get, class: "", role: :search do %>
+          <div class="search_box pull-right">
+            <%= text_field_tag :search_by_name, ""%>
+            <%= submit_tag t("label.search"), id: "btnSearch" %>
           </div>
+          <% end %>
         </div>
       </div>
     </div>
