--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -11,30 +11,29 @@
       <% @categories.each do |category|%>
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h4 class="panel-title"><%= link_to category.name, products_path(get_category_id: category.id)%></h4>
+          <h4 class="panel-title">
+            <%= link_to category.name, products_path(get_category_id: category.id)%>
+          </h4>
         </div>
       </div>
       <% end %>
     </div>
     <!--/category-products-->
 
-    <div class="brands_products">
-      <!--brands_products-->
+    <div class="brands_products"><!--brands_products-->
       <h2><%= t("label.new_item") %></h2>
       <div class="brands-name">
         <ul class="nav nav-pills nav-stacked">
-          <% @categories.each do |category|%>
-          <li>
-            <div class="shipping text-center">
-              <!--shipping-->
-              <%= image_tag("food1.jpg", alt: "food", class: "girl img-responsive", size: "80x80") %>
-            </div>
-            <!--/shipping-->
-          </li>
+          <% @new_products.each do |item|%>
+            <li>
+              <%= link_to image_tag(item.picture), item, alt: t("products.alt_img"), size: "80x80" %>
+              <h5><%= item.name %>
+                <span><%= number_to_currency item.price %></span>
+              </h5>
+            </li>
           <% end %>
         </ul>
       </div>
     </div>
-    <!--/brands_products-->
   </div>
 </div>
