--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,6 +54,10 @@
                         data: {toggle: "dropdown"} %>
                      <ul class="dropdown-menu">
                         <li>
+                          <%= link_to t("label.manage_product"), admin_products_path %>
+                        </li><br>
+
+                        <li>
                           <%= link_to t("label.manage_user"), admin_users_path %>
                         </li><br>
                         <li>
@@ -61,7 +65,7 @@
                         </li>
                     </ul>
                   </li>
-                  <% end %>
+                <% end %>
                 <li>
                    <%= link_to t("label.account"), "#", class: "dropdown-toggle", data: {toggle: "dropdown"} %>
                     <ul class="dropdown-menu">
