--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,21 +1,28 @@
 <%= provide :title, t(".title") %>
-<div class="container">
-  <h1><%= t ".title" %></h1>
-  <ul class="nav nav-tabs">
-  <%= form_tag admin_orders_path, method: :get do %>
-    <%= select_tag :status, options_for_select(@order.statuses, params[:status]) %>
-    <%= submit_tag t(".search"), class: "btn btn-success" %>
-  <% end %>
-  </ul>
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3><%= t ".confirm" %></h3>
-      <% if @order %>
-        <%= render @order %>
-      <% else %>
-        <b><i><%= t ".no_order" %></i></b>
+<% content_for :content do %>
+  <div class="container">
+    <h1><%= t ".title" %></h1>
+    <ul class="nav nav-tabs">
+      <%= form_tag admin_orders_path, method: :get, class: "form-group" do %>
+        <div class=" col-md-3">
+          <%= select_tag :status, options_for_select(@order.statuses, params[:status]), class: "form-control" %>
+        </div>
+        <div class=" col-md-3">
+          <%= submit_tag t(".search"), class: "btn btn-success" %>
+        </div>
       <% end %>
+    </ul>
+    <div class="tab-content col-md-12">
+      <div id="home" class="tab-pane fade in active">
+        <h3><%= t ".confirm" %></h3>
+        <% if @order %>
+          <%= render @order %>
+        <% else %>
+          <b><i><%= t ".no_order" %></i></b>
+        <% end %>
+      </div>
+      <%= will_paginate @order %>
     </div>
-    <%= will_paginate @order %>
   </div>
-</div>
+<% end %>
+<%= render "users/admin" %>
