--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "Chart.bundle", "chartkick",
+      "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
@@ -23,6 +24,7 @@
               <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
             <% end %>
           </div>
+          <%= yield :charts_js %>
           <%= yield %>
         </div>
         <%= render "layouts/footer" %>
