--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,22 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "Chart.bundle", "chartkick",
+      "data-turbolinks-track": "reload" %>
   </head>
 
   <body>
     <div>
-        <%= render "layouts/header" %>
-        <div class="main_layout">
-          <div class="container">
-            <% flash.each do |message_type, message| %>
-              <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
-            <% end %>
-          </div>
-          <%= yield %>
+      <%= render "layouts/header" %>
+      <div class="main_layout">
+        <div class="container">
+          <% flash.each do |message_type, message| %>
+            <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+          <% end %>
         </div>
-        <%= render "layouts/footer" %>
+        <%= yield %>
+      </div>
+      <%= render "layouts/footer" %>
     </div>
   </body>
 </html>
