--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,8 +4,15 @@
       <div class="productinfo text-center">
         <%= link_to image_tag(product.picture.url.to_s), product,class: "pic-1", alt: t("products.alt_img") %>
         <h2><%= number_to_currency product.price %></h2>
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-4">
+            <div class="rateyo-small"></div>
+            <p class="avg_point hidden"><%= product.avg_rating %></p>
+          </div>
+        </div>
         <p><h2><%= product.name %></h2></p>
-        <% if logged_in? %>
+        <% if signed_in? %>
           <%= form_for @order_item, remote: true do |f| %>
             <%= f.hidden_field :quantity, value: 1, class: "form-control", min: 1 %>
             <%= f.hidden_field :product_id, value: product.id %>
@@ -21,3 +28,4 @@
     </div>
   </div>
 </div>
+<%= javascript_include_tag "rating" %>
