--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,7 @@
                 <h2><%= @product.name %></h2>
                 <div class="rating">
                   <div class="rateyo-readonly-widg"></div>
-                  <div class="rate_point_lb">
+                  <div class="rate_point_lb hidden">
                     <%= t("products.rating") %>
                     <p class="rate_point"><%= @product.avg_rating %></p>
                   </div>
@@ -43,7 +43,7 @@
               <label><%= t("label.price") %></label>
               <span><%= number_to_currency @product.price %></span><br>
               <label><%= t("label.quantity") %></label>
-              <% if logged_in? %>
+              <% if signed_in? %>
                 <%= form_for @order_item, remote: true do |f| %>
                 <div>
                   <label><%= t("label.quantity") %></label>
